--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  http: ^0.12.0+2
+  dio: ^3.0.10
+  fluttertoast: ^7.1.4
+  shared_preferences: ^0.5.12+4
+  flutter_spinkit: "^4.1.2"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
